attempted fix of misubear background image on mobile

--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -122,14 +122,15 @@ footer a:hover {
 
 @media (max-width: 576px) {
     .misubackground {
-        width: 90vw;
+        width: 90%;
+        height: auto;
         margin-top: 3rem;
     }
 
     .misubackground img {
         margin: 0 auto;
-        width: 100vw;
-        height: auto;
+        width: 100%;
+        height: 100%;
         position: relative;
         display: block;
         float: center;
